[gd_scene load_steps=40 format=3 uid="uid://b47uo37wqqmde"]

[ext_resource type="Script" path="res://scripts/Movement.gd" id="1_ebrv6"]
[ext_resource type="Script" path="res://scripts/Pause.gd" id="1_lb3t6"]
[ext_resource type="Texture2D" uid="uid://cryo0fnpaguy2" path="res://sprites/player/idle/Idle_animation_0000.png" id="3_6vfby"]
[ext_resource type="Texture2D" uid="uid://ivx6sqnvipav" path="res://sprites/player/running/Timeline 1_0000.png" id="3_47q8g"]
[ext_resource type="FontFile" uid="uid://dw4q2lgvxq2x8" path="res://font/KnightWarrior-w16n8.otf" id="3_rcdkt"]
[ext_resource type="Texture2D" uid="uid://ddojd234ywc2s" path="res://sprites/player/idle/Idle_animation_0001.png" id="4_syo24"]
[ext_resource type="Texture2D" uid="uid://tig253slp26p" path="res://sprites/player/running/Timeline 1_0001.png" id="4_u6fga"]
[ext_resource type="Texture2D" uid="uid://bjl1x4vtwwkkd" path="res://sprites/player/idle/Idle_animation_0002.png" id="5_1n7hj"]
[ext_resource type="Texture2D" uid="uid://dolrchgrcffas" path="res://sprites/player/running/Timeline 1_0002.png" id="5_mg2q3"]
[ext_resource type="Texture2D" uid="uid://bcv37x5amh5ba" path="res://sprites/player/running/Timeline 1_0003.png" id="6_a6yde"]
[ext_resource type="Texture2D" uid="uid://8tvhr00p5y7b" path="res://sprites/player/running/Timeline 1_0004.png" id="7_5we0r"]
[ext_resource type="Texture2D" uid="uid://ddrrpoqv4qfso" path="res://sprites/player/running/Timeline 1_0005.png" id="8_xs44h"]
[ext_resource type="Texture2D" uid="uid://dpvc5e0fc46v7" path="res://sprites/player/running/Timeline 1_0006.png" id="9_6q0ub"]
[ext_resource type="Texture2D" uid="uid://bwfr7ie8mlety" path="res://sprites/player/running/Timeline 1_0007.png" id="10_wtmje"]
[ext_resource type="Texture2D" uid="uid://6lad0ut0lh3p" path="res://sprites/player/running/Timeline 1_0008.png" id="11_xd68x"]
[ext_resource type="Texture2D" uid="uid://81xm8s1acee1" path="res://sprites/player/running/Timeline 1_0009.png" id="12_wysf6"]
[ext_resource type="Texture2D" uid="uid://bvponi5e85cni" path="res://sprites/player/running/Timeline 1_0010.png" id="13_l23tv"]
[ext_resource type="AudioStream" uid="uid://53pfqccq01s1" path="res://music/MelonJam_Track_1_draft.mp3" id="15_juv0e"]
[ext_resource type="Material" uid="uid://dpjfy0pw2v8jm" path="res://themes/material.tres" id="17_g6bal"]
[ext_resource type="Texture2D" uid="uid://bguejwiflte4e" path="res://sprites/beacon/inactive/Beacon_inactive_0000.png" id="19_rjcj3"]
[ext_resource type="Texture2D" uid="uid://cc51k64u1tpq2" path="res://sprites/beacon/inactive/Beacon_inactive_0001.png" id="20_3uxdh"]
[ext_resource type="Texture2D" uid="uid://cthjqe0j1rqlo" path="res://sprites/beacon/inactive/Beacon_inactive_0002.png" id="21_2oout"]
[ext_resource type="Texture2D" uid="uid://bsild7akmvubb" path="res://sprites/beacon/inactive/Beacon_inactive_0003.png" id="22_1cosi"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_c6e7f"]
radius = 16.0
height = 92.0

[sub_resource type="Animation" id="Animation_5xoxn"]
resource_name = "Idle"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Idle"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [0, 1, 2]
}

[sub_resource type="Animation" id="Animation_pge5o"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="Animation" id="Animation_i43en"]
resource_name = "Run"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Run"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lsi2f"]
_data = {
"Idle": SubResource("Animation_5xoxn"),
"RESET": SubResource("Animation_pge5o"),
"Run": SubResource("Animation_i43en")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_3u1to"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_6vfby")
}, {
"duration": 1.0,
"texture": ExtResource("4_syo24")
}, {
"duration": 1.0,
"texture": ExtResource("5_1n7hj")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_47q8g")
}, {
"duration": 1.0,
"texture": ExtResource("4_u6fga")
}, {
"duration": 1.0,
"texture": ExtResource("5_mg2q3")
}, {
"duration": 1.0,
"texture": ExtResource("6_a6yde")
}, {
"duration": 1.0,
"texture": ExtResource("7_5we0r")
}, {
"duration": 1.0,
"texture": ExtResource("8_xs44h")
}, {
"duration": 1.0,
"texture": ExtResource("9_6q0ub")
}, {
"duration": 1.0,
"texture": ExtResource("10_wtmje")
}, {
"duration": 1.0,
"texture": ExtResource("11_xd68x")
}, {
"duration": 1.0,
"texture": ExtResource("12_wysf6")
}, {
"duration": 1.0,
"texture": ExtResource("13_l23tv")
}],
"loop": true,
"name": &"Run",
"speed": 5.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_idhfj"]
size = Vector2(1279, 132)

[sub_resource type="QuadMesh" id="QuadMesh_f4hvr"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4r7dd"]
size = Vector2(160, 583.5)

[sub_resource type="QuadMesh" id="QuadMesh_fcl7x"]

[sub_resource type="PlaceholderTexture2D" id="PlaceholderTexture2D_ckxbs"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_c7qkg"]
size = Vector2(69.5, 51.5)

[sub_resource type="Animation" id="Animation_lbwy8"]
resource_name = "Inactive"
length = 0.4
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:animation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [&"Inactive"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3]
}

[sub_resource type="Animation" id="Animation_5g7uq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uxa63"]
_data = {
"Inactive": SubResource("Animation_lbwy8"),
"RESET": SubResource("Animation_5g7uq")
}

[sub_resource type="SpriteFrames" id="SpriteFrames_qot31"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("19_rjcj3")
}, {
"duration": 1.0,
"texture": ExtResource("20_3uxdh")
}, {
"duration": 1.0,
"texture": ExtResource("21_2oout")
}, {
"duration": 1.0,
"texture": ExtResource("22_1cosi")
}],
"loop": true,
"name": &"Inactive",
"speed": 5.0
}]

[node name="World" type="Node2D"]
script = ExtResource("1_lb3t6")

[node name="Player" type="CharacterBody2D" parent="."]
position = Vector2(5, -335)
script = ExtResource("1_ebrv6")

[node name="RayCast2D" type="RayCast2D" parent="Player"]
position = Vector2(401, 841)
target_position = Vector2(22, 0)

[node name="RayCast2D2" type="RayCast2D" parent="Player"]
position = Vector2(401, 841)
target_position = Vector2(-22, 0)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Player"]
position = Vector2(401, 841)
shape = SubResource("CapsuleShape2D_c6e7f")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Player"]
libraries = {
"": SubResource("AnimationLibrary_lsi2f")
}
autoplay = "Idle"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Player"]
position = Vector2(402, 829)
scale = Vector2(0.25, 0.25)
sprite_frames = SubResource("SpriteFrames_3u1to")
animation = &"Idle"
frame = 1

[node name="Camera2D" type="Camera2D" parent="Player"]
position = Vector2(405, 754)
zoom = Vector2(1.5, 1.5)
limit_left = 0

[node name="Ground" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Ground"]
position = Vector2(639.5, 655)
shape = SubResource("RectangleShape2D_idhfj")
one_way_collision_margin = 2.3
debug_color = Color(0, 0.596078, 0.72549, 0.419608)

[node name="MeshInstance2D" type="MeshInstance2D" parent="Ground"]
position = Vector2(640, 653.375)
scale = Vector2(1280, 134.75)
mesh = SubResource("QuadMesh_f4hvr")

[node name="LeftWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="LeftWall"]
position = Vector2(81, 293)
shape = SubResource("RectangleShape2D_4r7dd")

[node name="MeshInstance2D" type="MeshInstance2D" parent="LeftWall"]
position = Vector2(82, 292.875)
scale = Vector2(162.5, 585.75)
mesh = SubResource("QuadMesh_fcl7x")

[node name="RightWall" type="StaticBody2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="RightWall"]
position = Vector2(1200.5, 292.75)
shape = SubResource("RectangleShape2D_4r7dd")

[node name="MeshInstance2D" type="MeshInstance2D" parent="RightWall"]
position = Vector2(1199.25, 295.25)
scale = Vector2(162.5, 584.5)
mesh = SubResource("QuadMesh_fcl7x")

[node name="Paused" type="Node" parent="."]
process_mode = 2

[node name="Resume" type="Button" parent="Paused"]
modulate = Color(1, 1, 1, 0)
material = ExtResource("17_g6bal")
offset_left = 460.0
offset_top = 220.0
offset_right = 856.0
offset_bottom = 515.0
theme_override_fonts/font = ExtResource("3_rcdkt")
theme_override_font_sizes/font_size = 60
text = "Resume"

[node name="Label" type="Label" parent="Paused"]
offset_left = 193.0
offset_top = 264.0
offset_right = 809.0
offset_bottom = 294.0
theme_override_fonts/font = ExtResource("3_rcdkt")
theme_override_font_sizes/font_size = 22
text = "You have paused the game. Press \"Resume\" or Enter to unpause"

[node name="Paused2" type="Node" parent="."]
process_mode = 3

[node name="Resume2" type="Button" parent="Paused2"]
modulate = Color(1, 1, 1, 0)
offset_left = 460.0
offset_top = 220.0
offset_right = 856.0
offset_bottom = 515.0
theme_override_fonts/font = ExtResource("3_rcdkt")
theme_override_font_sizes/font_size = 60
keep_pressed_outside = true
icon = SubResource("PlaceholderTexture2D_ckxbs")

[node name="Label" type="Label" parent="Paused2"]
offset_left = 394.0
offset_top = 8.0
offset_right = 923.0
offset_bottom = 38.0
theme_override_fonts/font = ExtResource("3_rcdkt")
theme_override_font_sizes/font_size = 25
text = "Inspector Map"
horizontal_alignment = 1

[node name="Camera2D" type="Camera2D" parent="Paused2"]
position = Vector2(643, -34)
scale = Vector2(-2.38163, -51.8415)
zoom = Vector2(0.445, 0.475)

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("15_juv0e")
volume_db = -20.0
autoplay = true

[node name="Beacon" type="StaticBody2D" parent="."]
position = Vector2(84, -1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Beacon"]
position = Vector2(941, 559.75)
shape = SubResource("RectangleShape2D_c7qkg")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Beacon"]
libraries = {
"": SubResource("AnimationLibrary_uxa63")
}
autoplay = "Inactive"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="Beacon"]
position = Vector2(943, 457)
scale = Vector2(0.5, 0.5)
sprite_frames = SubResource("SpriteFrames_qot31")
animation = &"Inactive"
frame = 1

[connection signal="pressed" from="Paused/Resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Paused2/Resume2" to="." method="_on_resume_2_pressed"]
